# researchProject

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile.sh  compile_commands.json  executeMany.py  executeSlowly.py  py.py  spe.py  tests.json  tests.py  times.json  valgrind-out.txt
exec/: generate.cc  main.cc  main.cu
include/: settings.hh  settings.json  tests.hh  testsPoints.hh  timeperf.hh  typedefs.hh
src/: dp.cc  dubins.cc  utils.cc
src/include/: Dubins.tt  clothoid.hh  clothoidG1.hh  configuration.hh  curve.hh  dp.hh  dp.tt  dubins.hh  dubins.tt  settings.hh  typedefs.hh  utils.hh
srcCC/: dp.cc  utils.cc
srcCC/include/: curve.hh  dp.hh  dp.tt  utils.hh
srcCU/: dp.cu  trig.cu  utils.cu
srcCU/include/: clothoidG1.hh  configuration.cuh  constants.cuh  curve.cuh  dp.cuh  dp.cut  dubins.cuh  dubins.cut  trig.cuh  utils.cuh
test/: clothoidG1Test.cc  configurationTest.cc  dubinsTest.cc  dubinsTest.hh  dubinsTest.txt  dubinsTestCC.cc  dubinsTestCU.cc  dubinsTestCU.cu  dubinsTestNew.txt  dubinsTestUtils.hh  main.cc  matrix.cc
testResults/: NUCAtomOpenMP.json  NUCi7NOOpenMP.json  NUCi7OpenMP.json  TX2CPUOpenMP.json  TX2Func1.json  TX2Func2.json  XavierCPUNOOpenMP.json  XavierCPUOpenMP.json  XavierFunc2.json  draw.py  newTests.py  readLog.py  readSPE.py  spe.json  speJump.json  speNew.json  tests.json  tests.py  tests_old.json
testResults/NUC/: tests.json
testResults/TX2/: tests.json
testResults/TX2Latest/TX2Latest/: tests.json
testResults/tabs/: tab.tex  tabs.tex
testResults/xavierGPU_old/: rename.sh
testResults/xavierLatest/: tests.json
